cabal-version:      3.0

name:               async-pool-test

version:            0.1.0.0

synopsis:           Behavior test for Control.Concurrent.Async.Pool.mapTasks_

license:            BSD-3-Clause

license-file:       LICENSE

author:             Joshua Chia

maintainer:         joshchia@gmail.com

category:           Testing
build-type:         Simple

common warnings
    ghc-options: -Wall

executable async-pool-test
    import:           warnings
    main-is:          Main.hs
    build-depends:    base
                    , async-pool == 0.9.2
    hs-source-dirs:   app
    default-language: GHC2021
